
bin_PROGRAMS = plain-port-scanner
plain_port_scanner_SOURCES = main.c output.c app-config.c network.c threads.c timer.c  
plain_port_scanner_CFLAGS = -pedantic-errors -Wall -O2 -std=gnu99
plain_port_scanner_LDADD = -lpthread
plain_port_scanner_LDFLAGS =

noinst_HEADERS = output.h app-config.h network.h threads.h timer.h

